# mission-kitty

./: .gitignore
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: mission.py
backend/app/routers/: chat.py  missions.py
backend/app/services/: cat_service.py  groq_service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/Cat/: CatDashboard.jsx  CatSprite.jsx  ClickableCat.jsx  RealCat.jsx
frontend/src/components/Chat/: ChatBox.jsx
frontend/src/components/Mission/: MissionCard.jsx  MissionForm.jsx  MissionList.jsx
frontend/src/components/Schedule/: MonthView.jsx  WeekView.jsx
frontend/src/contexts/: LanguageContext.jsx
frontend/src/hooks/: useAuth.js  useMissions.js
frontend/src/lib/: api.js  i18n.js  schedule.js
frontend/src/pages/: AuthPage.jsx  HomePage.jsx
supabase/migrations/: 001_init.sql  002_add_recurrence.sql  003_add_target_count.sql
